--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ map.on('load', function() {
 </script>
 									
 									<p> . <br />
-									The example above visualises where the nuclei would could be located. These areas like, Hurstville, Bankstown, Liverpool, North Sydney, black town, Strathfield… have the high concentrations of a specific ethnicity thus could be the holders of a cultural nuclei.   
+									The example above visualises where the nuclei would could be located. These areas like, Hurstville, Bankstown, Liverpool, North Sydney, black town, Strathfield… have the high concentrations of a specific ethnicity thus could be the holders of a cultural nuclei. //change   
 									</p>
 									
 								</article>
