--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <article>
                                     <header>
                                         
-                                        <h2><a name='link4'>The Location</a></h2>
+                                        <h2><a>The Location</a></h2>
                                     </header>
 									
 <div id='map' style='width: 100%; height: 400px; float: left'></div>
